Added pit downloader

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a id="scoutDownloadLink">Scout Data</a>
     </br>
     <a id="crossDownloadLink">Cross Data</a>
+    </br>
+    <a id="pitDownloadLink">Pit Scout Data</a>
 </body>
 </html>
