Add apk files so they can be downloaded

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<html>
-<head>
-    <title>MVRT Scouting Web</title>
-    <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
-    <script type="text/javascript" src="csvdownload.js"></script>
-</head>
-<body>
-    <a id="shotDownloadLink">Shot Data</a>
-    </br>
-    <a id="scoutDownloadLink">Scout Data</a>
-    </br>
-    <a id="crossDownloadLink">Cross Data</a>
-    </br>
-    <a id="pitDownloadLink">Pit Scout Data</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<title>MVRT Scouting Web</title>
+<script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+<script type="text/javascript" src="csvdownload.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<h3>Downloads</h3>
+
+Scout App: <a href="scout.apk">scout.apk</a>
+<br>
+Super Scout: <a href="superscout.apk">superscout.apk</a>
+
+<!-- <a id="shotDownloadLink">Shot Data</a>
+</br>
+<a id="scoutDownloadLink">Scout Data</a>
+</br>
+<a id="crossDownloadLink">Cross Data</a>
+</br>
+    <a id="pitDownloadLink">Pit Scout Data</a> -->
