--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 
 <title>MVRT Scouting Web</title>
-<script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCh7bLGBOIILTEjv1Cm_P4zmYBl7xL1JsQ",
+    authDomain: "mvrt-scout.firebaseapp.com",
+    databaseURL: "https://mvrt-scout.firebaseio.com",
+    storageBucket: "mvrt-scout.appspot.com",
+    messagingSenderId: "467897465307"
+  };
+  firebase.initializeApp(config);
+</script>
 <script type="text/javascript" src="csvdownload.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,10 +22,12 @@ Scout App: <a href="scout.apk">scout.apk</a>
 <br>
 Super Scout: <a href="superscout.apk">superscout.apk</a>
 
-<!-- <a id="shotDownloadLink">Shot Data</a>
-</br>
+<h3>Scouting Data</h3>
+
+<a id="shotDownloadLink">Shot Data</a>
+<br>
 <a id="scoutDownloadLink">Scout Data</a>
-</br>
+<br>
 <a id="crossDownloadLink">Cross Data</a>
-</br>
-    <a id="pitDownloadLink">Pit Scout Data</a> -->
+<br>
+<a id="pitDownloadLink">Pit Scout Data</a>
