Add link to github source/releases page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="mastfoot">
           <div class="inner">
-            <p>Written for <a href="http://www.mvrt.com">MVRT</a></p>
+            <p>App <a href="https://github.com/mvrt-115/android-scout/releases">Source</a> | Written for <a href="http://www.mvrt.com">MVRT</a></p>
           </div>
         </div>
 
