--- a/dataTable.html
+++ b/dataTable.html
@@ -29,37 +29,44 @@
 
   <div class="jumbotron">
     <div class="container">
-        <h1 class="display-3">MVRT Scouting Data</h1>
-        <p class="lead">
-            <a href="index.html" class="btn btn-lg btn-default">Home</a>
-            <a id="scoutDownloadLink" class="btn disabled btn-lg btn-warning">Download CSV</a>
-        </p>
+        <h1 class="display-3">MVRT Scout</h1>
     </div>
   </div>
 
-      <div class="container">
+  <div class="container">
 
-        <h2>Data Entries</h2>
-        <div class="table-responsive">
-          <table class="table table-hover table-striped">
-            <thead>
-              <tr>
-                <th>Match</th>
-                <th>Team</th>
-                <th>Super Data Present</th>
-                <th>Scout Data Present</th>
-                <th>Match Info</th>
-                <th>Scout ID</th>
-              </tr>
-            </thead>
-            <tbody id="dataTableBody"></tbody>
-          </table>
+    <ul class="nav nav-pills">
+      <li role="presentation"><a href="index.html">Home</a></li>
+      <li role="presentation" class="active"><a href="dataTable.html">Data Entries</a></li>
+      <li role="presentation"><a href="teamInfo.html">Team Info</a></li>
+      <li role="presentation"><a href="uploadImage.html">Robot Image Upload</a></li>
+    </ul>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+
+          <h2>Data Entries</h2>
+          <a id="scoutDownloadLink" class="btn disabled btn btn-default">Download CSV</a>
+
+          <div class="table-responsive">
+            <table class="table table-hover table-striped">
+              <thead>
+                <tr>
+                  <th>Match</th>
+                  <th>Team</th>
+                  <th>Super Data Present</th>
+                  <th>Scout Data Present</th>
+                  <th>Match Info</th>
+                  <th>Scout ID</th>
+                </tr>
+              </thead>
+              <tbody id="dataTableBody"></tbody>
+            </table>
+          </div>
+
         </div>
-      </main>
-    </div>
+      </div>
   </div>
-
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
