--- a/teamInfo.html
+++ b/teamInfo.html
@@ -59,6 +59,13 @@
             <!--<div class="col-xs-6 col-md-3"></div> -->
         </div>
 
+        <h3>Gears Placed: </h3>
+        <h4 id="gearsPlacedList"></h4>
+
+        <h3>Comments: </h3>
+        <ul class="list-group" id="commentsList">
+        </ul>
+
       </div>
     </div>
 
