Fix formatting to center mastfoot

--- a/login.html
+++ b/login.html
@@ -28,35 +28,34 @@
 
 
   <div class="site-wrapper">
-
     <div class="site-wrapper-inner">
-
       <div class="cover-container">
+
         <div class="inner cover">
           <img src="bullhead.png" style="padding: 30px" width="300" class="img-fluid" alt="Responsive image">
         </div>
+
+        <form class="form-inline">
+          <div class="form-group">
+            <label class="sr-only" for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label class="sr-only" for="pass">Password</label>
+            <input type="password" class="form-control" id="pass" placeholder="Password">
+          </div>
+          <button class="btn btn-default" id="signIn" type="button">Sign In</button>
+        </form>
+
+        <div class="mastfoot">
+          <div class="inner">
+            <p>Written for <a href="http://www.mvrt.com">MVRT</a></p>
+          </div>
+        </div>
+
+
       </div>
-
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="pass">Password</label>
-          <input type="password" class="form-control" id="pass" placeholder="Password">
-        </div>
-        <button class="btn btn-default" id="signIn" type="button">Sign In</button>
-      </form>
-
-      <div class="mastfoot">
-        <div class="inner">
-          <p>App <a href="https://github.com/mvrt-115/android-scout/releases">Source</a> | Written for <a href="http://www.mvrt.com">MVRT</a></p>
-        </div>
-      </div>
-
     </div>
-
   </div>
 
   <script src="login.js"></script>
