--- a/login.html
+++ b/login.html
@@ -31,6 +31,12 @@
     <div class="site-wrapper-inner">
       <div class="cover-container">
 
+        <div class="masthead">
+          <div class="inner">
+            <h3 class="masthead-brand">MVRT Scout</div>
+          </div>
+        </div>
+
         <div class="inner cover">
           <img src="bullhead.png" style="padding: 30px" width="300" class="img-fluid" alt="Responsive image">
         </div>
