--- a/dataTable.html
+++ b/dataTable.html
@@ -70,5 +70,19 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function(event) {
+
+      firebase.auth().onAuthStateChanged(function(user) {
+        if (user) {
+          console.log('logged in');
+        } else {
+          console.log('logged out');
+          window.location.replace('login.html');
+        }
+      });
+
+    });
+  </script>
 </body>
 </html>
