--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 
         <div class="masthead">
           <div class="inner">
-            <h3 class="masthead-brand">MVRT Scout</div>
+            <h3 class="masthead-brand">MVRT Scout</h3>
           </div>
         </div>
 
