--- a/teamInfo.html
+++ b/teamInfo.html
@@ -62,6 +62,9 @@
         <h3>Gears Placed: </h3>
         <h4 id="gearsPlacedList"></h4>
 
+        <h3>Climbs: </h3>
+        <h4 id="climbList"></h4>
+
         <h3>Comments: </h3>
         <ul class="list-group" id="commentsList">
         </ul>
