--- a/uploadImage.html
+++ b/uploadImage.html
@@ -58,6 +58,16 @@
       </div>
     </div>
 
+    <div class="panel panel-default">
+      <div class="panel-body">
+
+          <h3>Uploaded Teams: </h3>
+          <ul class="list-group" id="uploadedList">
+          </ul>
+
+      </div>
+    </div>
+
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
