--- a/teamInfo.html
+++ b/teamInfo.html
@@ -59,17 +59,8 @@
             <!--<div class="col-xs-6 col-md-3"></div> -->
         </div>
 
-        <h3>Scale Cubes Placed: </h3>
-        <h4 id="scalePlacedList"></h4>
-        
-        <h3>Switch Cubes Placed: </h3>
-        <h4 id="switchPlacedList"></h4>
-
-        <h3>Vault Cubes Placed: </h3>
-        <h4 id="vaultPlacedList"></h4>
-
-        <h3>Opponent Switch Cubes Placed: </h3>
-        <h4 id="oppSwitchPlacedList"></h4>
+        <div id="cubegraph" style="width:100%;height:600px;" hidden=true></div>
+        <div id="cubeline" style="width:100%;height:600px;" hidden=true></div>
 
         <h3>Climbs: </h3>
         <h4 id="climbList"></h4>
@@ -88,5 +79,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 </html>
