Update bootstrap and better viz

--- a/dataTable.html
+++ b/dataTable.html
@@ -35,15 +35,17 @@
 
   <div class="container">
 
-    <ul class="nav nav-pills">
-      <li role="presentation"><a href="index.html">Home</a></li>
-      <li role="presentation" class="active"><a href="dataTable.html">Data Entries</a></li>
-      <li role="presentation"><a href="teamInfo.html">Team Info</a></li>
-      <li role="presentation"><a href="uploadImage.html">Robot Image Upload</a></li>
-    </ul>
+      <ul class="nav nav-pills">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="dataTable.html">Data Entries</a></li>
+          <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
+          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link" href="uploadImage.html">Robot Image Upload</a></li>
+      </ul>
 
-    <div class="panel panel-default">
-      <div class="panel-body">
+
+    <div class="card card-default">
+      <div class="card-body">
 
           <h2>Data Entries</h2>
           <a id="scoutDownloadLink" class="btn disabled btn btn-default">Download CSV</a>
