--- a/matchView.html
+++ b/matchView.html
@@ -25,7 +25,7 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script src="teamInfo.js"></script>
+  <script src="matchView.js"></script>
 
   <div class="jumbotron">
     <div class="container">
@@ -35,21 +35,23 @@
 
   <div class="container">
 
-
       <ul class="nav nav-pills">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
-          <li class="nav-item"><a class="nav-link active" href="teamInfo.html">Team Info</a></li>
-          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
+          <li class="nav-item"><a class="nav-link active" href="matchView.html">Match Data</a></li>
           <li class="nav-item"><a class="nav-link" href="uploadImage.html">Robot Image Upload</a></li>
       </ul>
 
     <div class="card card-default">
       <div class="card-body">
 
-        <h2>Team Info</h2>
-        <div class="input-group input-group-lg">
-          <input id="searchTeam" type="number" class="form-control" placeholder="Team Number (115)">
+        <h2>Match View</h2>
+
+
+        <div class="input-group">
+          <input id="searchTourn" width="200px" type="text" class="form-control" placeholder="Tourn ID (2018utwv)" value="2018utwv">
+          <input id="searchMatch" type="text" class="form-control" placeholder="Match ID (qm1)">
           <span class="input-group-btn">
             <button class="btn btn-default" id="searchBtn" type="button">Search</button>
           </span>
@@ -57,22 +59,13 @@
 
         </br>
 
-        <div class="row" id="images">
-            <!--<div class="col-xs-6 col-md-3"></div> -->
+        <h3>Blue: </h3>
+        <div class="row" id="bluecubegraphs">
         </div>
 
-        <div id="cubegraph" style="width:100%;height:600px;" hidden=true></div>
-        <div id="cubeline" style="width:100%;height:600px;" hidden=true></div>
-
-        <h3>Climbs: </h3>
-        <h4 id="climbList"></h4>
-
-        <h3>Parking: </h3>
-        <h4 id="parkingList"></h4>
-
-        <h3>Comments: </h3>
-        <ul class="list-group" id="commentsList">
-        </ul>
+        <h3>Red: </h3>
+        <div class="row" id="redcubegraphs">
+        </div>
 
       </div>
     </div>
@@ -80,6 +73,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="bootstrap/js/popper.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
