--- a/uploadImage.html
+++ b/uploadImage.html
@@ -34,15 +34,17 @@
 
   <div class="container">
 
-    <ul class="nav nav-pills">
-      <li role="presentation"><a href="index.html">Home</a></li>
-      <li role="presentation"><a href="dataTable.html">Data Entries</a></li>
-      <li role="presentation"><a href="teamInfo.html">Team Info</a></li>
-      <li role="presentation" class="active"><a href="uploadImage.html">Robot Image Upload</a></li>
-    </ul>
+      <ul class="nav nav-pills">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
+          <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
+          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link active" href="uploadImage.html">Robot Image Upload</a></li>
+      </ul>
 
-    <div class="panel panel-default">
-      <div class="panel-body">
+
+    <div class="card card-default">
+      <div class="card-body">
 
         <h2>Image Upload</h2>
 
@@ -58,8 +60,8 @@
       </div>
     </div>
 
-    <div class="panel panel-default">
-      <div class="panel-body">
+    <div class="card card-default">
+      <div class="card-body">
 
           <h3>Uploaded Teams: </h3>
           <ul class="list-group" id="uploadedList">
