Rename Match View to Match Preview

--- a/teamInfo.html
+++ b/teamInfo.html
@@ -40,7 +40,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
           <li class="nav-item"><a class="nav-link active" href="teamInfo.html">Team Info</a></li>
-          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Preview</a></li>
           <li class="nav-item"><a class="nav-link" href="uploadImage.html">Robot Image Upload</a></li>
       </ul>
 
