--- a/uploadImage.html
+++ b/uploadImage.html
@@ -38,7 +38,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
           <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
-          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Preview</a></li>
           <li class="nav-item"><a class="nav-link active" href="uploadImage.html">Robot Image Upload</a></li>
       </ul>
 
