--- a/matchView.html
+++ b/matchView.html
@@ -39,14 +39,14 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
           <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
-          <li class="nav-item"><a class="nav-link active" href="matchView.html">Match Data</a></li>
+          <li class="nav-item"><a class="nav-link active" href="matchView.html">Match Preview</a></li>
           <li class="nav-item"><a class="nav-link" href="uploadImage.html">Robot Image Upload</a></li>
       </ul>
 
     <div class="card card-default">
       <div class="card-body">
 
-        <h2>Match View</h2>
+        <h2>Match Preview</h2>
 
 
         <div class="input-group">
