--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+  <script src="firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -66,7 +66,7 @@
   </div>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function(event) {
