--- a/matchView.html
+++ b/matchView.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+  <script src="firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -72,9 +72,9 @@
 
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/popper.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="plotly-latest.min.js"></script>
 </body>
 </html>
