--- a/dataTable.html
+++ b/dataTable.html
@@ -25,7 +25,6 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script type="text/javascript" src="csvdownload.js"></script>
 
   <div class="jumbotron">
     <div class="container">
@@ -50,7 +49,11 @@
           <h2>Data Entries</h2>
           <a id="scoutDownloadLink" class="btn disabled btn btn-default">Download CSV</a>
 
-          <div class="table-responsive">
+          <div id="progress" class="progress">
+            <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+          </div>
+
+          <div id="table" class="table-responsive">
             <table class="table table-hover table-striped">
               <thead>
                 <tr>
@@ -72,6 +75,7 @@
 
   <script src="jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="csvdownload.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function(event) {
 
