--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script type="text/javascript" src="csvdownload.js"></script>
-
 
   <div class="site-wrapper">
 
@@ -49,7 +47,7 @@
           </br>
           <p class="lead">
             <a id="scoutDownloadLink" class="btn disabled btn-lg btn-default">Download CSV</a>
-            <a href="dataTable.html" class="btn btn-lg btn-warning">Dashboard</a>
+            <a href="dataTable.html" class="btn btn-lg btn-secondary">Dashboard</a>
           </p>
         </div>
 
@@ -84,5 +82,6 @@
 
     });
   </script>
+  <script type="text/javascript" src="csvdownload.js"></script>
 </body>
 </html>
