--- a/login.html
+++ b/login.html
@@ -46,25 +46,10 @@
 
         <div id="firebaseui-auth-container"></div>
         <div id="loader">Loading...</div>
-
-
-        <!-- <div class="container">
-            <div class="card bg-dark">
-                <div class="card-body">
-                <form>
-                  <div class="form-group">
-                    <label class="sr-only" for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
-                  </div>
-                  <div class="form-group">
-                    <label class="sr-only" for="pass">Password</label>
-                    <input type="password" class="form-control" id="pass" placeholder="Password">
-                  </div>
-                </form>
-                <button class="btn btn-light" id="signIn" type="button">Sign In</button>
-                </div>
-            </div>
-        </div> -->
+        <div id="sign_out">
+            <p>Your account has not been verified yet - contact an admin, or use a different account!</p>
+            <a id="signoutlink" class="btn btn-secondary">sign out</a>
+        </div>
 
         <div class="mastfoot">
           <div class="inner foot">
