--- a/matchView.html
+++ b/matchView.html
@@ -59,13 +59,13 @@
 
         </br>
 
-        <h3>Blue: </h3>
-        <div class="row" id="bluecubegraphs">
-        </div>
+        <div class="row" id="topview"></div>
 
-        <h3>Red: </h3>
-        <div class="row" id="redcubegraphs">
-        </div>
+        <h3>Box: </h3>
+        <div class="row" id="bluecubegraphs"></div>
+
+        <h3>Scatter: </h3>
+        <div class="row" id="redcubegraphs"></div>
 
       </div>
     </div>
@@ -76,5 +76,6 @@
   <script src="bootstrap/js/popper.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="plotly-latest.min.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
