--- a/uploadImage.html
+++ b/uploadImage.html
@@ -75,5 +75,6 @@
   <script src="jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="uploadImage.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
