--- a/matchView-old.html
+++ b/matchView-old.html
@@ -25,6 +25,7 @@
     };
     firebase.initializeApp(config);
   </script>
+  <script src="matchView.js"></script>
 
   <div class="jumbotron">
     <div class="container">
@@ -36,46 +37,45 @@
 
       <ul class="nav nav-pills">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="dataTable.html">Data Entries</a></li>
+          <li class="nav-item"><a class="nav-link" href="dataTable.html">Data Entries</a></li>
           <li class="nav-item"><a class="nav-link" href="teamInfo.html">Team Info</a></li>
-          <li class="nav-item"><a class="nav-link" href="matchView.html">Match Preview</a></li>
+          <li class="nav-item"><a class="nav-link active" href="matchView.html">Match Preview</a></li>
           <li class="nav-item"><a class="nav-link" href="uploadImage.html">Robot Image Upload</a></li>
       </ul>
-
 
     <div class="card card-default">
       <div class="card-body">
 
-          <h2>Data Entries</h2>
-          <a id="scoutDownloadLink" class="btn disabled btn btn-default">Download CSV</a>
+        <h2>Match Preview</h2>
 
-          <div id="progress" class="progress">
-            <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-          </div>
 
-          <div id="table" class="table-responsive">
-            <table class="table table-hover table-striped">
-              <thead>
-                <tr>
-                  <th>Match</th>
-                  <th>Team</th>
-                  <th>Super Data Present</th>
-                  <th>Scout Data Present</th>
-                  <th>Match Info</th>
-                  <th>Scout ID</th>
-                </tr>
-              </thead>
-              <tbody id="dataTableBody"></tbody>
-            </table>
-          </div>
-
+        <div class="input-group">
+          <input id="searchTourn" width="200px" type="text" class="form-control" placeholder="Tourn ID (2018utwv)" value="2018utwv">
+          <input id="searchMatch" type="text" class="form-control" placeholder="Match ID (qm1)">
+          <span class="input-group-btn">
+            <button class="btn btn-default" id="searchBtn" type="button">Search</button>
+          </span>
         </div>
+
+        </br>
+
+        <h3>Blue: </h3>
+        <div class="row" id="bluecubegraphs">
+        </div>
+
+        <h3>Red: </h3>
+        <div class="row" id="redcubegraphs">
+        </div>
+
       </div>
+    </div>
+
   </div>
 
   <script src="jquery-3.3.1.min.js"></script>
+  <script src="bootstrap/js/popper.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script src="csvdownload.js"></script>
+  <script src="plotly-latest.min.js"></script>
   <script src="auth.js"></script>
 </body>
 </html>
