--- a/teamInfo.html
+++ b/teamInfo.html
@@ -61,8 +61,9 @@
             <!--<div class="col-xs-6 col-md-3"></div> -->
         </div>
 
-        <div id="cubegraph" style="width:100%;height:600px;" hidden=true></div>
-        <div id="cubeline" style="width:100%;height:600px;" hidden=true></div>
+        <div class="row" id="teamgraphs">
+            <!-- <div id="cubeline" class="col-xs-3 col-md-6" hidden=true></div> -->
+        </div>
 
         <h3>Climbs: </h3>
         <h4 id="climbList"></h4>
@@ -82,5 +83,6 @@
   <script src="jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="plotly-latest.min.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
