--- a/matchView.html
+++ b/matchView.html
@@ -50,7 +50,7 @@
 
 
         <div class="input-group">
-          <input id="searchTourn" width="200px" type="text" class="form-control" placeholder="Tourn ID (2018utwv)" value="2018utwv">
+          <input id="searchTourn" width="200px" type="text" class="form-control" placeholder="Tourn ID (2018idbo)" value="2018idbo">
           <input id="searchMatch" type="text" class="form-control" placeholder="Match ID (qm1)">
           <span class="input-group-btn">
             <button class="btn btn-default" id="searchBtn" type="button">Search</button>
