Allow for custom matchups

--- a/matchView.html
+++ b/matchView.html
@@ -47,7 +47,7 @@
       <div class="card-body">
 
         <h2>Match Preview</h2>
-
+        <p><i>You can also enter six team numbers instead of a match ID</i></p>
 
         <div class="input-group">
           <input id="searchTourn" width="200px" type="text" class="form-control" placeholder="Tourn ID (2018idbo)" value="2018idbo">
