Remove capture preference on image upload

--- a/uploadImage.html
+++ b/uploadImage.html
@@ -54,7 +54,7 @@
         </div>
 
         <label id="dragFile" class="btn btn-lg btn-warning">Upload
-            <input type="file" style="display:none;" accept="image/*" onchange="handleFiles(this.files)" capture>
+            <input type="file" style="display:none;" accept="image/*" onchange="handleFiles(this.files)">
         </label>
 
       </div>
