--- a/matchView.html
+++ b/matchView.html
@@ -25,7 +25,6 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script src="matchView.js"></script>
 
   <div class="jumbotron">
     <div class="container">
@@ -59,13 +58,19 @@
 
         </br>
 
-        <div class="row" id="topview"></div>
+        <div id="progress" class="progress">
+          <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+        </div>
 
-        <h3>Box: </h3>
-        <div class="row" id="bluecubegraphs"></div>
+        <div id="matchview">
+            <div class="row" id="topview"></div>
 
-        <h3>Scatter: </h3>
-        <div class="row" id="redcubegraphs"></div>
+            <h3>Box: </h3>
+            <div class="row" id="bluecubegraphs"></div>
+
+            <h3>Scatter: </h3>
+            <div class="row" id="redcubegraphs"></div>
+        </div>
 
       </div>
     </div>
@@ -77,5 +82,6 @@
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="plotly-latest.min.js"></script>
   <script src="auth.js"></script>
+  <script src="matchView.js"></script>
 </body>
 </html>
