display team numbers

--- a/matchView.html
+++ b/matchView.html
@@ -63,6 +63,9 @@
         </div>
 
         <div id="matchview">
+            <h5>Teams: <span id="redteams" style="color: #e53935">Red</span> vs
+                <span id="blueteams" style="color: #3949AB">Blue</span></h5>
+
             <div class="row" id="topview"></div>
 
             <h3>Box: </h3>
