--- a/teamInfo.html
+++ b/teamInfo.html
@@ -59,23 +59,59 @@
             <!--<div class="col-xs-6 col-md-3"></div> -->
         </div>
 
-        <h3>Scale Cubes Placed: </h3>
-        <h4 id="scalePlacedList"></h4>
+        <h3>Cargo ship hatches: </h3>
+        <h4 id="cargoHatchList"></h4>
         
-        <h3>Switch Cubes Placed: </h3>
-        <h4 id="switchPlacedList"></h4>
+        <h3>Cargo ship cargo: </h3>
+        <h4 id="cargoCargoList"></h4>
 
-        <h3>Vault Cubes Placed: </h3>
-        <h4 id="vaultPlacedList"></h4>
+        <h3>Rocket lvl 1 hatches: </h3>
+        <h4 id="r1HatchList"></h4>
 
-        <h3>Opponent Switch Cubes Placed: </h3>
-        <h4 id="oppSwitchPlacedList"></h4>
+        <h3>Rocket lvl 1 cargo: </h3>
+        <h4 id="r1CargoList"></h4>
 
-        <h3>Climbs: </h3>
-        <h4 id="climbList"></h4>
+        <h3>Rocket lvl 2 hatches: </h3>
+        <h4 id="r2HatchList"></h4>
 
-        <h3>Parking: </h3>
-        <h4 id="parkingList"></h4>
+        <h3>Rocket lvl 2 cargo: </h3>
+        <h4 id="r2CargoList"></h4>
+
+        <h3>Rocket lvl 3 hatches: </h3>
+        <h4 id="r3HatchList"></h4>
+
+        <h3>Rocket lvl 3 cargo: </h3>
+        <h4 id="r3CargoList"></h4>
+
+        <h3>Sandstorm cargo ship hatches: </h3>
+        <h4 id="cargoHatchListSandstorm"></h4>
+        
+        <h3>Sandstorm cargo ship cargo: </h3>
+        <h4 id="cargoCargoListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 1 hatches: </h3>
+        <h4 id="r1HatchListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 1 cargo: </h3>
+        <h4 id="r1CargoListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 2 hatches: </h3>
+        <h4 id="r2HatchListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 2 cargo: </h3>
+        <h4 id="r2CargoListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 3 hatches: </h3>
+        <h4 id="r3HatchListSandstorm"></h4>
+
+        <h3>Sandstorm rocket lvl 3 cargo: </h3>
+        <h4 id="r3CargoListSandstorm"></h4>
+
+        <h3>Lvl 2 Climbs: </h3>
+        <h4 id="climbList2"></h4>
+
+        <h3>Lvl 3 Climbs: </h3>
+        <h4 id="climbList3"></h4>
 
         <h3>Comments: </h3>
         <ul class="list-group" id="commentsList">
