add graphing functionality

--- a/teamInfo.html
+++ b/teamInfo.html
@@ -9,6 +9,8 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="dataTable.css" rel="stylesheet">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
   <title>MVRT Scouting Web</title>
 </head>
 <body>
@@ -65,11 +67,15 @@
         <h3>Cargo ship cargo: </h3>
         <h4 id="cargoCargoList"></h4>
 
+        <canvas id="cargoGraph" width="1600" height="900"></canvas>
+
         <h3>Rocket lvl 1 hatches: </h3>
         <h4 id="r1HatchList"></h4>
 
         <h3>Rocket lvl 1 cargo: </h3>
         <h4 id="r1CargoList"></h4>
+
+        <canvas id="l1Graph" width="1600" height="900"></canvas>
 
         <h3>Rocket lvl 2 hatches: </h3>
         <h4 id="r2HatchList"></h4>
@@ -77,11 +83,15 @@
         <h3>Rocket lvl 2 cargo: </h3>
         <h4 id="r2CargoList"></h4>
 
+        <canvas id="l2Graph" width="1600" height="900"></canvas>
+
         <h3>Rocket lvl 3 hatches: </h3>
         <h4 id="r3HatchList"></h4>
 
         <h3>Rocket lvl 3 cargo: </h3>
         <h4 id="r3CargoList"></h4>
+
+        <canvas id="l3Graph" width="1600" height="900"></canvas>
 
         <h3>Sandstorm cargo ship hatches: </h3>
         <h4 id="cargoHatchListSandstorm"></h4>
@@ -89,11 +99,15 @@
         <h3>Sandstorm cargo ship cargo: </h3>
         <h4 id="cargoCargoListSandstorm"></h4>
 
+        <canvas id="cargoGraphS" width="1600" height="900"></canvas>
+
         <h3>Sandstorm rocket lvl 1 hatches: </h3>
         <h4 id="r1HatchListSandstorm"></h4>
 
         <h3>Sandstorm rocket lvl 1 cargo: </h3>
         <h4 id="r1CargoListSandstorm"></h4>
+
+        <canvas id="l1GraphS" width="1600" height="900"></canvas>
 
         <h3>Sandstorm rocket lvl 2 hatches: </h3>
         <h4 id="r2HatchListSandstorm"></h4>
@@ -101,11 +115,15 @@
         <h3>Sandstorm rocket lvl 2 cargo: </h3>
         <h4 id="r2CargoListSandstorm"></h4>
 
+        <canvas id="l2GraphS" width="1600" height="900"></canvas>
+  
         <h3>Sandstorm rocket lvl 3 hatches: </h3>
         <h4 id="r3HatchListSandstorm"></h4>
 
         <h3>Sandstorm rocket lvl 3 cargo: </h3>
         <h4 id="r3CargoListSandstorm"></h4>
+
+        <canvas id="l3GraphS" width="1600" height="900"></canvas>
 
         <h3>Lvl 2 Climbs: </h3>
         <h4 id="climbList2"></h4>
