--- a/teamInfo.html
+++ b/teamInfo.html
@@ -131,6 +131,10 @@
         <h3>Lvl 3 Climbs: </h3>
         <h4 id="climbList3"></h4>
 
+        <canvas id="hatchesGraph" width="1600" height="900"></canvas> 
+        <canvas id="cargosGraph" width="1600" height="900"></canvas>
+
+
         <h3>Comments: </h3>
         <ul class="list-group" id="commentsList">
         </ul>
