--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
 
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+
+  <script
+  type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
   <script>
     // Initialize Firebase
     var config = {
