--- a/uploadImage.html
+++ b/uploadImage.html
@@ -37,6 +37,7 @@
     <ul class="nav nav-pills">
       <li role="presentation"><a href="index.html">Home</a></li>
       <li role="presentation"><a href="dataTable.html">Data Entries</a></li>
+      <li role="presentation" ><a href="matchView.html">Match Preview</a></li>
       <li role="presentation"><a href="teamInfo.html">Team Info</a></li>
       <li role="presentation" class="active"><a href="uploadImage.html">Robot Image Upload</a></li>
     </ul>
