--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     };
     firebase.initializeApp(config);
   </script>
+
+  
   <script type="text/javascript" src="csvdownload.js"></script>
 
 
@@ -55,7 +57,7 @@
           </br>
           <p class="lead">
             <a id="scoutDownloadLink" class="btn disabled btn-lg btn-default">Download CSV</a>
-            <a href="dataTable.html" class="btn btn-lg btn-warning">Dashboard</a>
+            <a href="teamInfo.html" class="btn btn-lg btn-warning">Dashboard</a>
           </p>
         </div>
 
