Fixed more bugs

--- a/teamInfo.html
+++ b/teamInfo.html
@@ -90,17 +90,11 @@
         <h5>totalDefenseMatches: </h5>
         <h6 id="totalDefenseMatches"></h6>
 
-        <h5>totalInner: </h5>
-        <h6 id="totalInner"></h6>
+        <h5>avgInner: </h5>
+        <h6 id="avgInner"></h6>
 
-        <h5>totalOuter: </h5>
-        <h6 id="totalOuter"></h6>
-
-        <h5>totalBottom: </h5>
-        <h6 id="totalBottom"></h6>
-
-        <h5>totalMissed: </h5>
-        <h6 id="totalBottomTeleopCells"></h6>
+        <h5>avgUpper: </h5>
+        <h6 id="avgUpper"></h6>
 
         <h5>comments: </h5>
         <h6 id="comments"></h6>
