fixed even more bugs

--- a/teamInfo.html
+++ b/teamInfo.html
@@ -72,14 +72,8 @@
         <h3>avgTeleopCellsMissed: </h3>
         <h4 id="avgTeleopCellsMissed"></h4>
 
-        <h5>stdDevCells: </h5>
-        <h6 id="stdDevCells"></h6>
-
         <h3>avgCycles: </h3>
         <h4 id="avgCycles"></h4>
-
-        <h5>stdDevCycles: </h5>
-        <h6 id="stdDevCycles"></h6>
         
         <h3>avgClimbs: </h3>
         <h4 id="avgClimbs"></h4>
@@ -90,7 +84,7 @@
         <h5>avgInner: </h5>
         <h6 id="avgInner"></h6>
 
-        <h5>avgUpper: </h5>
+        <h5>avgOuter: </h5>
         <h6 id="avgUpper"></h6>
 
         <h5>comments: </h5>
