--- a/robotInfo.html
+++ b/robotInfo.html
@@ -45,6 +45,9 @@
       <li role="presentation"><a href="index.html">Home</a></li>
       <li role="presentation"><a href="teamInfo.html">Robot Performance Info</a>
       <li role="presentation" class="active"><a href="robotInfo.html">Robot Specifications Info</a></li>
+      <li role="presentation"><a href="matchInfo.html">Match Info</a></li>
+      <li role="presentation"><a href="innerRankings.html">Inner Port Rankings</a></li>
+
      </li>
     </ul>
 
