--- a/untitled.html
+++ b/untitled.html
@@ -45,7 +45,7 @@
       <li role="presentation"><a href="index.html">Home</a></li>
       <li role="presentation" class="active"><a href="teamInfo.html">Robot Performance Info</a></li>
       <li role="presentation"><a href="robotInfo.html">Robot Specifications Info</a></li>
-      <li role="presentation"><a href="matchInfo.html">Match Info</a></li>
+      <li role="presentation"><a href="robotInfo.html">Robot Specifications Info</a></li>
       <li role="presentation"><a href="innerRankings.html">Inner Port Rankings</a></li>
 
     </ul>
