--- a/matchSearch.html
+++ b/matchSearch.html
@@ -61,37 +61,17 @@
           </span>
         </div>
 
+        <div class="input-group input-group-lg">
+          <input id="searchMatch" type="number" class="form-control" placeholder="Match Number (1)">
+          <span class="input-group-btn">
+            <button class="btn btn-default" id="searchBtn" type="button">Search</button>
+          </span>
+        </div>
+
         </br>
 
-        <h3>avgAutonCells: </h3>
-        <h4 id="avgAutonCells"></h4>
-        
-        <h3>avgAutonCellsMissed: </h3>
-        <h4 id="avgAutonCellsMissed"></h4>
-
-        <h3>avgTeleopCells: </h3>
-        <h4 id="avgTeleopCells"></h4>
-
-        <h3>avgTeleopCellsMissed: </h3>
-        <h4 id="avgTeleopCellsMissed"></h4>
-
-        <h3>avgCycles: </h3>
-        <h4 id="avgCycles"></h4>
-        
-        <h3>avgClimbs: </h3>
-        <h4 id="avgClimbs"></h4>
-
-        <h5>totalDefenseMatches: </h5>
-        <h6 id="totalDefenseMatches"></h6>
-
-        <h5>avgInner: </h5>
-        <h6 id="avgInner"></h6>
-
-        <h5>avgOuter: </h5>
-        <h6 id="avgUpper"></h6>
-
-        <h5>comments: </h5>
-        <h6 id="comments"></h6>
+        <h3>match: </h3>
+        <h4 id="match"></h4>
 
       </div>
     </div>
