--- a/teamInfo.html
+++ b/teamInfo.html
@@ -90,6 +90,12 @@
         <h5>avgOuter: </h5>
         <h6 id="avgUpper"></h6>
 
+        <h3>cycles: </h3>
+        <h4 id="cycles"></h4>
+
+        <h3>cells: </h3>
+        <h4 id="cells"></h4>
+
         <h5>comments: </h5>
         <h6 id="comments"></h6>
 
